--- a/csplugins/trunk/ucsd/ruschein/ModFind/resources/ModFind_overview_vs.props
+++ b/csplugins/trunk/ucsd/ruschein/ModFind/resources/ModFind_overview_vs.props
@@ -3,46 +3,45 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Fri Apr 02 12:29:43 PDT 2010
+#Fri Apr 30 11:10:39 PDT 2010
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeColor=51,51,255
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFont=SanSerif,plain,10
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=5
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=5.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelColor=50,50,255
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelOpacity=70
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelOpacity=70.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLineStyle=SOLID
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLineWidth=3
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeOpacity=90
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLineWidth=3.0
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeOpacity=255.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowOpacity=120
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowOpacity=120.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowOpacity=120
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowOpacity=120.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeToolTip=
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderColor=0,0,0
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderOpacity=255
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderOpacity=255.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFillColor=255,255,255
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFont=Default,plain,12
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFontSize=12.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeHight=30.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabel=
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelColor=0,0,0
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelOpacity=255
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelOpacity=255.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelWidth=100.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLineStyle=SOLID
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLineWidth=1.0
-edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeOpacity=255
+edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeOpacity=255.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeShape=rect
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeShowNestedNetwork=true
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeSize=35.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeToolTip=
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeWidth=70.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.edgeLineWidthCalculator=Complex Overview Style-EdgeWidthMapping
-edgeAppearanceCalculator.Complex\ Overview\ Style.edgeOpacityCalculator=Complex Overview Style-EdgeOpacityMapping
 edgeAppearanceCalculator.Complex\ Overview\ Style.nodeSizeLocked=true
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFont=SanSerif,plain,10
@@ -296,6 +295,24 @@ edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.contro
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.type=ContinuousMapping
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.visualPropertyType=EDGE_OPACITY
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=2
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.domainvalue=0.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.equal=10.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.greater=10.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.lesser=1.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.domainvalue=165.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.equal=30.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.greater=1.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.lesser=30.0
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.controller=edge score
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.type=ContinuousMapping
+edgeOpacityCalculator.Complex\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.visualPropertyType=EDGE_OPACITY
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=0
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.controller=edge score
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.type=ContinuousMapping
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.visualPropertyType=EDGE_OPACITY
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultBackgroundColor=255,255,255
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeReverseSelectionColor=0,255,0
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSelectionColor=255,0,0
@@ -331,36 +348,36 @@ nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFont=SanSerif,plain
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=10.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabel=
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelColor=0,0,0
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelOpacity=255
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelOpacity=255.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLabelWidth=100.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLineStyle=SOLID
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeLineWidth=1.0
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeOpacity=255
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeOpacity=255.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowOpacity=255
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowOpacity=255.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowOpacity=255
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowOpacity=255.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeToolTip=
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderColor=25,25,25
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderOpacity=255
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFillColor=25,25,200
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFont=Default,plain,12
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderColor=0,0,0
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeBorderOpacity=255.0
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFillColor=204,204,204
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFont=Serif.bold,plain,12
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelColor=10,10,10
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelOpacity=225
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelPosition=S,N,c,0,4
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelOpacity=225.0
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelPosition=C,C,c,0,0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLineStyle=SOLID
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLineWidth=4
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeOpacity=0
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeLineWidth=0.0
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeShape=roundrect
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeShowNestedNetwork=true
-nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeSize=65
+nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeSize=65.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeWidth=70.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.nodeLabelCalculator=Complex Overview Style-NodeLabelMapping
@@ -384,9 +401,9 @@ nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeTargetArrowColor=0,0,
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeTargetArrowOpacity=255.0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeTargetArrowShape=NONE
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeToolTip=
-nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeBorderColor=0,153,0
+nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeBorderColor=0,153,51
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeBorderOpacity=190.0
-nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeFillColor=153,255,153
+nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeFillColor=0,204,0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeFont=SansSerif,plain,12
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeFontSize=13.0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeHight=30.0
@@ -397,7 +414,7 @@ nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeLabelPosition=C,C,c,0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeLineStyle=SOLID
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeLineWidth=2.0
-nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeOpacity=150.0
+nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeShape=ellipse
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeShowNestedNetwork=true
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultNodeSize=40.0
@@ -569,12 +586,12 @@ nodeAppearanceCalculator.default.defaultNodeWidth=70.0
 nodeAppearanceCalculator.default.nodeLabelCalculator=NodeLabel
 nodeAppearanceCalculator.default.nodeSizeLocked=true
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.map.yes=0,102,204
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.visualPropertyType=NODE_BORDER_COLOR
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.map.yes=255,255,255
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.visualPropertyType=NODE_FILL_COLOR
@@ -600,22 +617,22 @@ nodeLabelCalculator.id\ as\ node\ labels.mapping.controller=ID
 nodeLabelCalculator.id\ as\ node\ labels.mapping.type=PassThroughMapping
 nodeLabelCalculator.id\ as\ node\ labels.visualPropertyType=NODE_LABEL
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.map.yes=0,102,204
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.visualPropertyType=NODE_LABEL_COLOR
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controllerType=4
+nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controllerType=-1
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.map.yes=SE,NW,c,0,0
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.visualPropertyType=NODE_LABEL_POSITION
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controllerType=4
+nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controllerType=-1
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.map.yes=5.0
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.visualPropertyType=NODE_LINE_WIDTH
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controllerType=4
+nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controllerType=-1
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.map.yes=rect
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.visualPropertyType=NODE_SHAPE
@@ -633,7 +650,7 @@ nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.mapping.inter
 nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.mapping.type=ContinuousMapping
 nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.visualPropertyType=NODE_SIZE
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controllerType=4
+nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controllerType=-1
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.map.yes=60.0
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.visualPropertyType=NODE_SIZE
