Added VisualStyleBypass doc page
git-svn-id: http://chianti.ucsd.edu/svn@20057 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/website/build.xml
+++ b/cytoscapeweb/trunk/website/build.xml
@@ -87,7 +87,7 @@
         
         <mkdir dir="${api.dir}/visual_style"/>
         <copy todir="${api.dir}/visual_style" overwrite="true">
-            <fileset dir="${temp.dir}/symbols" includes="**.VisualStyle.php"/>
+            <fileset dir="${temp.dir}/symbols" includes="**.VisualStyle.php **.VisualStyleBypass.php"/>
         </copy>
         
         <mkdir dir="${api.dir}/layout"/>
