--- a/csplugins/trunk/ucsd/ruschein/tutorial23/build.xml
+++ b/csplugins/trunk/ucsd/ruschein/tutorial23/build.xml
@@ -11,22 +11,22 @@
     <property name="plugin_name" value="tutorial23"/>
     <property name="plugin_class" value="cytoscape.tutorial23.Tutorial23"/>  	  	
     <property name="project.jar" value="${plugin_name}.jar"/>  	
-  	<property name="version" value="1.1"/>
-    <property name="year" value="2008"/>
+    <property name="version" value="1.0"/>
+    <property name="year" value="2010"/>
   	
     <echo message="Building plugin ${plugin_name} version ${version}..."/>
 
     <!-- Define the plugin directories -->
-  	<property name="root.dir" value="."/>
+    <property name="root.dir" value="."/>
     <property name="src.dir" value="${root.dir}/src"/>
-  	<property name="build.dir" value="${root.dir}/build"/>
+    <property name="build.dir" value="${root.dir}/build"/>
     <property name="images.dir" value="${root.dir}/images"/>
     <property name="manifest.dir" value="${root.dir}/manifest"/>
     <property name="lib.dir" value="${root.dir}/lib"/>
 
-  	<!-- Define the Cytoscape directories -->
-    <property name="cytoscape.dir" value="../../cytoscape"/>
-  	<property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
+    <!-- Define the Cytoscape directories -->
+    <property name="cytoscape.dir" value="../../../../eqn_attribs"/>
+    <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
 
     <!-- Inheritable properties -->
@@ -37,9 +37,9 @@
     <property name="fork" value="false"/>
   	
     <!-- Check the availability of some files -->  	
- 	<available file="${cytoscape.dir}/cytoscape.jar" property="cytoscape.present"/> 
-  	<available file="${root.dir}/plugin.props" property="plugin.prop.present"/>
-  	<available file="${images.dir}" property="images.dir.present"/>
+    <available file="${cytoscape.dir}/cytoscape.jar" property="cytoscape.present"/> 
+    <available file="${root.dir}/plugin.props" property="plugin.prop.present"/>
+    <available file="${images.dir}" property="images.dir.present"/>
 
     <!-- Define the java class path -->
     <path id="project.class.path">
