Start implement Visual Style Observer to apply correct visual style for modules.
git-svn-id: http://chianti.ucsd.edu/svn@20106 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/ModFind/resources/ModFindVS.props
+++ b/csplugins/trunk/ucsd/ruschein/ModFind/resources/ModFindVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Thu May 06 11:38:19 PDT 2010
+#Thu May 06 11:53:35 PDT 2010
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeColor=102,102,102
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=5.0
@@ -49,33 +49,33 @@ edgeAppearanceCalculator.Module\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Module\ Style.defaultEdgeFontSize=10.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelColor=0,0,0
-edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLineWidth=3.0
-edgeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.Module\ Style.defaultEdgeToolTip=
 edgeAppearanceCalculator.Module\ Style.defaultNodeBorderColor=0,0,0
-edgeAppearanceCalculator.Module\ Style.defaultNodeBorderOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultNodeBorderOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeFillColor=255,255,255
 edgeAppearanceCalculator.Module\ Style.defaultNodeFont=Default,plain,12
 edgeAppearanceCalculator.Module\ Style.defaultNodeFontSize=12.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeHight=30.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeLabel=
 edgeAppearanceCalculator.Module\ Style.defaultNodeLabelColor=0,0,0
-edgeAppearanceCalculator.Module\ Style.defaultNodeLabelOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultNodeLabelOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.Module\ Style.defaultNodeLabelWidth=100.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeLineStyle=SOLID
 edgeAppearanceCalculator.Module\ Style.defaultNodeLineWidth=1.0
-edgeAppearanceCalculator.Module\ Style.defaultNodeOpacity=255
+edgeAppearanceCalculator.Module\ Style.defaultNodeOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeShape=rect
 edgeAppearanceCalculator.Module\ Style.defaultNodeShowNestedNetwork=true
 edgeAppearanceCalculator.Module\ Style.defaultNodeSize=35.0
@@ -584,7 +584,7 @@ globalAppearanceCalculator.Complex\ Overview\ Style.defaultBackgroundColor=255,2
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeReverseSelectionColor=0,255,0
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeSelectionColor=255,0,0
 globalAppearanceCalculator.Complex\ Overview\ Style.defaultNodeReverseSelectionColor=0,255,0
-globalAppearanceCalculator.Complex\ Overview\ Style.defaultNodeSelectionColor=255,255,0
+globalAppearanceCalculator.Complex\ Overview\ Style.defaultNodeSelectionColor=204,255,255
 globalAppearanceCalculator.Module\ Style.defaultBackgroundColor=255,255,255
 globalAppearanceCalculator.Module\ Style.defaultEdgeReverseSelectionColor=0,255,0
 globalAppearanceCalculator.Module\ Style.defaultEdgeSelectionColor=255,0,0
@@ -666,33 +666,33 @@ nodeAppearanceCalculator.Module\ Style.defaultEdgeFont=SanSerif,plain,10
 nodeAppearanceCalculator.Module\ Style.defaultEdgeFontSize=10.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLabel=
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLabelColor=0,0,0
-nodeAppearanceCalculator.Module\ Style.defaultEdgeLabelOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultEdgeLabelOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLabelWidth=100.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLineStyle=SOLID
 nodeAppearanceCalculator.Module\ Style.defaultEdgeLineWidth=1.0
-nodeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowColor=0,0,0
-nodeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowShape=NONE
 nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowColor=0,0,0
-nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowShape=NONE
 nodeAppearanceCalculator.Module\ Style.defaultEdgeToolTip=
 nodeAppearanceCalculator.Module\ Style.defaultNodeBorderColor=0,0,0
-nodeAppearanceCalculator.Module\ Style.defaultNodeBorderOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeFillColor=0,102,153
 nodeAppearanceCalculator.Module\ Style.defaultNodeFont=Default,plain,12
 nodeAppearanceCalculator.Module\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelColor=0,0,0
-nodeAppearanceCalculator.Module\ Style.defaultNodeLabelOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultNodeLabelOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelPosition=S,N,c,0,0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLineStyle=SOLID
 nodeAppearanceCalculator.Module\ Style.defaultNodeLineWidth=0.0
-nodeAppearanceCalculator.Module\ Style.defaultNodeOpacity=255
+nodeAppearanceCalculator.Module\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeShape=ellipse
 nodeAppearanceCalculator.Module\ Style.defaultNodeShowNestedNetwork=true
 nodeAppearanceCalculator.Module\ Style.defaultNodeSize=45.0
